# EagleLibrary

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.template  LICENSE  README.md  SECURITY.md  build.bat  build_help.bat
.github/workflows/: build.yml
docs/help/: EagleLibrary.chm  EagleLibrary.hhc  EagleLibrary.hhk  EagleLibrary.hhp  database.html  index.html  libraries.html  menus.html  portable.html  settings.html  tools.html
docs/wiki/: Home.md
include/: AppConfig.h  Book.h  BookDelegate.h  BookDetailDialog.h  BookModel.h  CommandPalette.h  CoverDownloader.h  Database.h  LanguageManager.h  LibraryScanner.h  MainWindow.h  MetadataFetcher.h  PluginInterface.h  PluginManager.h  SettingsDialog.h  SplashScreen.h  ThemeManager.h  ThumbnailCache.h
installer/: BUILD_SETUP.txt  LICENSE.txt  README.txt  eagle_library.nsi  refresh_portable.bat
installer/help/: EagleLibrary.chm
installer/plugins/device_sync_tools/: plugin.json
installer/plugins/metadata_assistant/: plugin.json
installer/plugins/research_toolbox/: plugin.json
plugins/catalog_enrichment/: plugin.json
plugins/metadata_assistant/: plugin.json
plugins/research_toolbox/: plugin.json
resources/: eagle_library.rc  resources.qrc
resources/hooks/: README.txt
resources/themes/: blue.qss  mac.qss  white.qss
resources/translations/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  pt_BR.json  ru.json  zh_CN.json
src/: BookDelegate.cpp  BookDetailDialog.cpp  BookModel.cpp  CommandPalette.cpp  CoverDownloader.cpp  Database.cpp  LanguageManager.cpp  LibraryScanner.cpp  MainWindow.cpp  MetadataFetcher.cpp  PluginManager.cpp  SettingsDialog.cpp  SplashScreen.cpp  ThemeManager.cpp  ThumbnailCache.cpp  main.cpp
tests/: RuntimeLayoutTests.cpp
